Bug 474801 - Order of quote details widget when switching with 'Tab' is not ascending
Summary: Order of quote details widget when switching with 'Tab' is not ascending
Status: RESOLVED FIXED
Alias: None
Product: alkimia
Classification: Frameworks and Libraries
Component: Online quotes widget (other bugs)
Version First Reported In: 8.1.2
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-09-23 10:02 UTC by Ralf Habacker
Modified: 2024-07-28 08:06 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 8.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2023-09-23 10:02:26 UTC
SUMMARY
The order of quote details widget when switching with 'Tab' is not ascending.

STEPS TO REPRODUCE
1.  Download alkimia stable package from https://kmymoney.org/snapshots.php
2.  unpack archive and start onlinequoteseditor
3. select url widget
4. press tab multiple times 

OBSERVED RESULT
The current order is 

Url
DateFormat
Symbol
Skip HTML Stripping
Price
GHNS Source
Date

EXPECTED RESULT
while it should be like this

Url
Symbol
Price
Date
DateFormat
GHNS Source
Skip HTML Stripping


SOFTWARE/OS VERSIONS
Windows: 10
KDE Frameworks Version: 5.76 
Qt Version: 5.12
Comment 1 Ralf Habacker 2023-09-23 10:44:25 UTC
Git commit 13ef16164cf63d44df56d4858cf28de126689866 by Ralf Habacker.
Committed on 23/09/2023 at 12:44.
Pushed by habacker into branch '8.1'.

Fix tab order for edit fields in quote details widget

Changing the tab order with xml '<tabstop>' tags and/or QWidget::setTabOrder()
did not work, so it was necessary to adjust the order of the widgets in the
ui file.
FIXED-IN:8.1.3

M  +107  -83   src/alkonlinequoteswidget.ui

https://invent.kde.org/office/alkimia/-/commit/13ef16164cf63d44df56d4858cf28de126689866
Comment 2 Ralf Habacker 2023-09-23 11:39:15 UTC
(In reply to Ralf Habacker from comment #1)
> Changing the tab order with xml '<tabstop>' tags and/or
> QWidget::setTabOrder() did not work, so it was necessary to adjust the order of the widgets in the
> ui file.

Editing UI files with Designer changes the order of widgets, so the problem is reintroduced the next time a change is made. 

This means that to fix the problem in a stable way, it would be necessary to enable the use of tabstops in the xml file or QWidget::setTabOrder() in the source code.
Comment 3 Ralf Habacker 2023-09-25 06:39:13 UTC
(In reply to Ralf Habacker from comment #1)
> Changing the tab order with xml '<tabstop>' tags and/or
> QWidget::setTabOrder() did not work

Since the problem also occurs with an earlier version of QT/KDE, the reason is probably not in the QT/KDE framework.
Comment 4 Thomas Baumgart 2024-07-28 08:06:22 UTC
Git commit c2b7bf2496906e061aafa96af981be0c2eef124b by Thomas Baumgart.
Committed on 28/07/2024 at 08:06.
Pushed by tbaumgart into branch 'master'.

Fix tab order in AlkOnlineQuotesWidget

Apparently to disable and enable a widget has an impact on the tab order
between the widgets. The solution is to reset the tab order to the
desired form after the status of the widgets has been changed.
FIXED-IN: 8.2

M  +16   -0    src/alkonlinequotedetails.ui
M  +16   -0    src/alkonlinequoteswidget.cpp

https://invent.kde.org/office/alkimia/-/commit/c2b7bf2496906e061aafa96af981be0c2eef124b