Fix tab order in AlkOnlineQuotesWidget

Apparently to disable and enable a widget has an impact on the tab order
between the widgets. The solution is to reset the tab order to the
desired form after the status of the widgets has been changed.

BUG: 474801
FIXED-IN: 8.2